Changelog
=========

2.1.4 (Unreleased)
------------------

2.1.3 (2011-07-12)
------------------

- PortalType-criteria should use archetype_name as value when querying for the
  Type-index. Fixes http://dev.plone.org/plone/ticket/11913
  [WouterVH]

- NonRefCatalogContent-objects, e.g. criteria, should not obtain a UUID.
  Fixes http://dev.plone.org/plone/ticket/11904
  [WouterVH]

- When a folder is not of the same type than its parent,
  if this folder acquires constraint,
  the allowed types are the intersection of globally allowed types in folder
  and locally allowed types of its parent.
  This fixes http://dev.plone.org/plone/ticket/11950.
  [thomasdesvenain]

- For collections displayed in table view, show localized date-format.
  Fixes http://dev.plone.org/plone/ticket/11155
  [WouterVH]

- Fixed: adding a disallowed subobject raises ValueError instead of Unauthorized
  if disallow is related to content types restriction.
  [thomasdesvenain]

- Activate manual sorting on relatedItems field.
  [toutpt]

2.1.2 (2011-05-12)
------------------

- Use DateTime's built-in support to do `datetime.datetime` conversions.
  [hannosch]

- Fixed `atdocument` tests to be compatible with Archetypes 1.7.5.
  [hannosch]

- Optimize images and icon file sizes.
  [hannosch]

- The implementations of HEAD for folderish objects were severely outdated
  and never made much sense to begin with. Replace with basic
  WebdavResource.HEAD.
  [stefan]

2.1.1 (2011-02-04)
------------------

- Added support for the new BooleanIndex and UUIDIndex for collections.
  [hannosch]

- Remove superfluous and/or operator for "Item type" criterion.
  This fixes http://dev.plone.org/plone/ticket/10882
  [msmith64]

2.1.0 (2011-01-03)
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Added CSS id to subtopics-header in atct_topic_view.pt to allow styling.
  [tom_gross]

- Make sure topic criteria get a valid UUID using plone.uuid.
  [toutpt, davisagli]
