@@ -4,6 +4,11 @@ Changelog
 2.1.4 (Unreleased)
 ------------------
 
+- Avoid critical error if for any reason,
+  constrain type mode is set to ACQUIRE on a folder at the root level.
+  Refs http://dev.plone.org/plone/ticket/11950#comment:3
+  [yulka, thomasdesvenain]
+
 2.1.3 (2011-07-12)
 ------------------
 
